feat: 添加地图相关设置，支持高德地图和开源地图的配置
