# proto/gen/apidocs.swagger.yaml
@@ -708,7 +708,7 @@ paths:
               memoRelatedSetting:
                 $ref: '#/definitions/apiv1WorkspaceMemoRelatedSetting'
               mapRelatedSetting:
-                $ref: '#/definitions/storeWorkspaceMapRelatedSetting'
+                $ref: '#/definitions/apiv1WorkspaceMapRelatedSetting'
             title: setting is the setting to update.
       tags:
         - WorkspaceSettingService
@@ -1984,16 +1984,6 @@ definitions:
       undoCount:
         type: integer
         format: int32
-  WorkspaceMapRelatedSettingMapProvider:
-    type: string
-    enum:
-      - MAP_PROVIDER_UNSPECIFIED
-      - AMAP
-      - OSM
-    default: MAP_PROVIDER_UNSPECIFIED
-    description: |2-
-       - AMAP: AMAP is the AMap provider (高德地图).
-       - OSM: OSM is the OpenStreetMap provider.
   WorkspaceStorageSettingS3Config:
     type: object
     properties:
@@ -2299,6 +2289,25 @@ definitions:
       disallowChangeNickname:
         type: boolean
         description: disallow_change_nickname disallows changing nickname.
+  apiv1WorkspaceMapRelatedSetting:
+    type: object
+    properties:
+      mapProvider:
+        $ref: '#/definitions/apiv1WorkspaceMapRelatedSettingMapProvider'
+        description: map_provider is the map service provider.
+      amapApiKey:
+        type: string
+        description: amap_api_key is the API key for Amap (高德地图) service.
+  apiv1WorkspaceMapRelatedSettingMapProvider:
+    type: string
+    enum:
+      - MAP_PROVIDER_UNSPECIFIED
+      - AMAP
+      - OSM
+    default: MAP_PROVIDER_UNSPECIFIED
+    description: |2-
+       - AMAP: AMAP is the AMap provider (高德地图).
+       - OSM: OSM is the OpenStreetMap provider.
   apiv1WorkspaceMemoRelatedSetting:
     type: object
     properties:
@@ -2352,7 +2361,7 @@ definitions:
       memoRelatedSetting:
         $ref: '#/definitions/apiv1WorkspaceMemoRelatedSetting'
       mapRelatedSetting:
-        $ref: '#/definitions/storeWorkspaceMapRelatedSetting'
+        $ref: '#/definitions/apiv1WorkspaceMapRelatedSetting'
   apiv1WorkspaceStorageSetting:
     type: object
     properties:
@@ -2517,15 +2526,6 @@ definitions:
             "@type": "type.googleapis.com/google.protobuf.Duration",
             "value": "1.212s"
           }
-  storeWorkspaceMapRelatedSetting:
-    type: object
-    properties:
-      mapProvider:
-        $ref: '#/definitions/WorkspaceMapRelatedSettingMapProvider'
-        description: map_provider is the map service provider.
-      amapApiKey:
-        type: string
-        description: amap_api_key is the API key for Amap (高德地图) service.
   v1Activity:
     type: object
     properties:
